# OpenUniversity_Assembler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Makefile  README.md
AviSembler/: CMakeLists.txt
AviSembler/include/: boolean.h  directives_table.h  logger.h  operand_type.h  str_helper.h  validator.h
AviSembler/src/: command.c  logger.c  main.c
include/: bitmap.h  boolean.h  command.h  dictionary.h  directives_table.h  error.h  file_writer.h  first_walk.h  instructions_table.h  linked_list.h  operand_type.h  operands_validator.h  parser.h  second_walk.h  status.h  str_helper.h  symbol.h  translator.h  utils.h  validator.h  walk.h
src/: bitmap.c  command.c  dictionary.c  directives_table.c  file_writer.c  first_walk.c  instructions_table.c  linked_list.c  main.c  operand_type.c  operands_validator.c  operands_validtor.c  parser.c  second_walk.c  str_helper.c  translator.c  utils.c  validator.c  walk.c
src/instructions_table/: instructions_table.c
src/parser/: parser.c
src/utils/: dictionary.c  str_helper.c
src/validator/: validator.c
